ADEN-12620 Fixing top-ads-container collapsing and collapse proxy for IX tags

--- a/src/platforms/f2/styles.scss
+++ b/src/platforms/f2/styles.scss
@@ -2,6 +2,9 @@
 @import '../shared/styles/index';
 @import '../shared/styles/mixin';
 
+$label-height: -24px;
+$space-between-uap-components: 30px;
+
 @mixin non-uap-advertisement-label() {
 	$advertisement-label-height: 24px;
 
@@ -14,130 +17,6 @@
 	position: relative;
 	text-align: center;
 	text-transform: uppercase;
-}
-
-@mixin f2-styles() {
-	$label-height: -24px;
-	$space-between-uap-components: 30px;
-
-	#top_leaderboard {
-		justify-content: center;
-		margin: 0 auto;
-		max-width: 100vw;
-		overflow: hidden;
-		padding: 18px 24px 0;
-		text-align: center;
-
-		> div {
-			text-align: center;
-			margin: 0 auto;
-		}
-	}
-
-	#bottom_leaderboard {
-		margin: 0 auto;
-	}
-
-	.gpt-ad {
-		text-align: center;
-
-		&.hide,
-		& .hide {
-			display: none !important;
-		}
-
-		& > div > iframe {
-			display: block;
-			margin: 0 auto;
-		}
-	}
-
-	body {
-		.companion-stick {
-			.article-layout__rail {
-				margin-top: 0;
-			}
-
-			.article-layout__top-box-ad,
-			.feed-layout__right-rail {
-				position: sticky;
-				z-index: 100;
-				padding-top: $space-between-uap-components;
-			}
-		}
-	}
-
-	body:not(.uap-sticked) {
-		.companion-stick {
-			.article-layout__top-box-ad,
-			.feed-layout__right-rail {
-				top: 0 !important;
-			}
-		}
-	}
-
-	.feed-item .gpt-ad {
-		padding: 24px 24px 30px;
-		position: sticky;
-		top: 55px;
-		width: 300px;
-
-		@media #{$wds-breakpoint-large-up} {
-			padding-top: 6px;
-		}
-	}
-
-	@media #{$wds-breakpoint-small-only} {
-		#top_leaderboard[data-slot-result='success']::after {
-			@include non-uap-advertisement-label();
-		}
-	}
-
-	#top_boxad[data-slot-result='success']::after,
-	#incontent_boxad[data-slot-result='success']::after,
-	#bottom_leaderboard[data-slot-result='success']::after {
-		@include non-uap-advertisement-label();
-	}
-
-	#top_boxad[data-slot-result='success']::after {
-		@media #{$wds-breakpoint-large-up} {
-			background: #fff;
-			margin: auto;
-			width: 31%;
-		}
-	}
-
-	/* Adjust label height for ad alignment */
-	.article__wrapper #top_boxad {
-		position: relative;
-		top: $label-height;
-	}
-
-	.article-layout__rail.has-incontent-ad {
-		margin-top: 29px;
-	}
-
-	#floor_adhesion {
-		background: rgba(0, 0, 0, 0.8);
-		bottom: 0;
-		left: 0;
-		padding: 20px 0;
-
-		.button-close {
-			border: 2px solid white;
-			border-radius: 50%;
-			width: 40px;
-			height: 40px;
-			top: -20px;
-
-			&:after {
-				content: '';
-				position: absolute;
-				width: 45px;
-				height: 45px;
-			}
-		}
-	}
 }
 
 @mixin out-of-page-styles() {
@@ -173,7 +52,7 @@
 		}
 
 		.top-ads-container {
-			padding: 0;
+			padding: 0 !important;
 
 			.ad-slot-placeholder.top-leaderboard {
 				min-height: unset;
@@ -232,12 +111,139 @@
 	@include expanded-slot();
 }
 
+#top_leaderboard {
+	justify-content: center;
+	margin: 0 auto;
+	max-width: 100vw;
+	overflow: hidden;
+	padding: 18px 24px 0;
+	text-align: center;
+
+	> div {
+		text-align: center;
+		margin: 0 auto;
+	}
+}
+
+#bottom_leaderboard {
+	margin: 0 auto;
+}
+
 #top_leaderboard,
 #bottom_leaderboard {
 	@include uap-advertisement-label();
 }
 
-@include f2-styles();
+.gpt-ad {
+	text-align: center;
+
+	&.hide,
+	& .hide {
+		display: none !important;
+	}
+
+	& > div > iframe {
+		display: block;
+		margin: 0 auto;
+	}
+}
+
+.top-ads-container.hide,
+.bottom-ads-container.hide,
+.ad-slot-placeholder.hide {
+	display: none !important;
+}
+
+body {
+	.companion-stick {
+		.article-layout__rail {
+			margin-top: 0;
+		}
+
+		.article-layout__top-box-ad,
+		.feed-layout__right-rail {
+			position: sticky;
+			z-index: 100;
+			padding-top: $space-between-uap-components;
+		}
+	}
+}
+
+body:not(.uap-sticked) {
+	.companion-stick {
+		.article-layout__top-box-ad,
+		.feed-layout__right-rail {
+			top: 0 !important;
+		}
+	}
+}
+
+.feed-item .gpt-ad {
+	padding: 24px 24px 30px;
+	position: sticky;
+	top: 55px;
+	width: 300px;
+
+	@media #{$wds-breakpoint-large-up} {
+		padding-top: 6px;
+	}
+}
+
+@media #{$wds-breakpoint-small-only} {
+	#top_leaderboard[data-slot-result='success']::after {
+		@include non-uap-advertisement-label();
+	}
+}
+
+#top_boxad[data-slot-result='success']::after,
+#incontent_boxad[data-slot-result='success']::after,
+#bottom_leaderboard[data-slot-result='success']::after {
+	@include non-uap-advertisement-label();
+}
+
+#top_boxad[data-slot-result='success']::after {
+	@media #{$wds-breakpoint-large-up} {
+		background: #fff;
+		margin: auto;
+		width: 31%;
+	}
+}
+
+/* Adjust label height for ad alignment */
+.article__wrapper #top_boxad {
+	position: relative;
+	top: $label-height;
+}
+
+.article-layout__rail.has-incontent-ad {
+	margin-top: 29px;
+}
+
+#floor_adhesion {
+	background: rgba(0, 0, 0, 0.8);
+	bottom: 0;
+	left: 0;
+	padding: 20px 0;
+
+	.button-close {
+		border: 2px solid white;
+		border-radius: 50%;
+		width: 40px;
+		height: 40px;
+		top: -20px;
+
+		&:after {
+			content: '';
+			position: absolute;
+			width: 45px;
+			height: 45px;
+		}
+	}
+}
+
+// ToDo: fix styli na F2
+// ToDo: collapsowanie na F2
+
 @include f2-uap-styles();
 @include logo-replacement(56px, 0, 0, 93px, 27px);
 @include out-of-page-styles();
